--- a/fps-game/export_presets.cfg
+++ b/fps-game/export_presets.cfg
@@ -20,14 +20,14 @@ encryption_exclude_filters=""
 seed=0
 encrypt_pck=false
 encrypt_directory=false
-script_export_mode=2
+script_export_mode=1
 
 [preset.0.options]
 
 custom_template/debug=""
 custom_template/release=""
 debug/export_console_wrapper=0
-binary_format/embed_pck=false
+binary_format/embed_pck=true
 texture_format/s3tc_bptc=true
 texture_format/etc2_astc=false
 shader_baker/enabled=false
@@ -46,9 +46,9 @@ application/file_version=""
 application/product_version=""
 application/company_name="jm.calabia.corp"
 application/product_name="Calabia RPG"
-application/file_description=""
-application/copyright=""
-application/trademarks=""
+application/file_description="UNDER DEVELOPMENT"
+application/copyright="John Michael Calabia"
+application/trademarks="Calabia Corporation"
 application/export_angle=0
 application/export_d3d12=0
 application/d3d12_agility_sdk_multiarch=true
